# class-notes/21-PersonelApi_Logs_Documents/src/controllers/auth.js
@@ -73,6 +73,20 @@ module.exports = {
 module.exports = {
 
     login: async (req, res) => {
+        /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Login'
+            #swagger.description = 'Login with username and password'
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    username: '*String',
+                    email: 'String',
+                    password: '*String',
+                }
+            }
+        */
 
         const { username, password } = req.body
 
@@ -122,6 +136,11 @@ module.exports = {
     },
 
     logout: async (req, res) => {
+        /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Logout'
+            #swagger.description = 'Delete token.'
+        */
 
         const data = req.user ? await Token.deleteOne({ userId: req.user._id }) : null
 
