# class-notes/21-PersonelApi_Logs_Documents/src/routes/auth.js
@@ -11,7 +11,8 @@ const { login, logout } = require('../controllers/auth')
 
 router.post('/login', login)
 
-router.all('/logout', logout)
+// router.all('/logout', logout)
+router.get('/logout', logout)
 
 
 module.exports = router
